--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,6 @@ DirectoryIndex first.html index.htm index.html index.php
 #Set CORS Header Correctly
 Header set Access-Control-Allow-Origin "*"
 
-<IfModule mod_rewrite.c> 
-        RewriteCond %{REQUEST_FILENAME} !.well-known/
-        RewriteRule "(^|/)\.(?!well-known)" - [F]
-    </IfModule>
+location ~ /\.well-known { 
+    allow all;
+}
